# ugc-surveys

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: manage.py
src/common/models/: base.py
src/config/: asgi.py  urls.py  urls_api_v1.py  wsgi.py
src/config/settings/: __init__.py  base.py  dev.py  prod.py
src/surveys/: apps.py  permissions.py
src/surveys/management/commands/: seed_demo.py
src/surveys/migrations/: 0001_initial.py
src/surveys/models/: __init__.py  answer_option.py  question.py  survey.py  survey_run.py  user_answer.py
src/surveys/serializers/: __init__.py  answer_option.py  question.py  run.py  stats.py  survey.py
src/surveys/services/: __init__.py  demo_seed.py  runs.py  stats.py
src/surveys/urls/: __init__.py  answer_options.py  questions.py  runs.py  surveys.py
src/surveys/views/: __init__.py  answer_options.py  questions.py  runs.py  surveys.py
src/users/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/users/models/: __init__.py  identity.py  user.py
